wordle scraper phase 1

--- a/leetcode/75 leetcode/wordle_solver/test.ipynb
+++ b/leetcode/75 leetcode/wordle_solver/test.ipynb
@@ -2,83 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests, json\n",
-    "import threading\n",
-    "\n",
-    "\n",
-    "def get_letter_words(letter, original):\n",
-    "    page_number = 1\n",
-    "    result = []\n",
-    "    while True:\n",
-    "        try:\n",
-    "            headers = {\n",
-    "                'User-Agent': 'Mozilla/5.0 (X11; Linux x86_64; rv:102.0) Gecko/20100101 Firefox/102.0',\n",
-    "                'Accept': '*/*',\n",
-    "                'Accept-Language': 'en-US,en;q=0.5',\n",
-    "                'X-Requested-With': 'XMLHttpRequest',\n",
-    "                'DNT': '1',\n",
-    "                'Connection': 'keep-alive',\n",
-    "                'Referer': 'https://www.dictionary.com/e/word-finder/5-letter-words/',\n",
-    "                'Sec-Fetch-Dest': 'empty',\n",
-    "                'Sec-Fetch-Mode': 'cors',\n",
-    "                'Sec-Fetch-Site': 'same-origin',\n",
-    "            }\n",
-    "\n",
-    "            params = {\n",
-    "                'page': f'{page_number}',\n",
-    "                'wordLength': '5',\n",
-    "                'letter': f'{letter.upper()}',\n",
-    "                'action': 'get_wf_widget_page',\n",
-    "                'pageType': '4',\n",
-    "                'nonce': 'eb40d9b58e',\n",
-    "            }\n",
-    "            response = requests.get('https://www.dictionary.com/e/crb-ajax/cached.php', params=params, headers=headers)\n",
-    "            result.extend(json.loads(response.text)['data']['words'])\n",
-    "            page_number+=1\n",
-    "        except:\n",
-    "            break\n",
-    "    original.extend(result)\n",
-    "\n",
-    "def get_all_5_letter_words():\n",
-    "    alphabet = 'abcdefghijklmnopqrstuvwxyz'\n",
-    "    threads = []\n",
-    "    all_words = []\n",
-    "    for i in alphabet:\n",
-    "        t = threading.Thread(target=get_letter_words, args=((i, all_words)))\n",
-    "        threads.append(t)\n",
-    "    for t in threads:\n",
-    "        t.start()\n",
-    "    for t in threads:\n",
-    "        t.join()\n",
-    "        \n",
-    "    return all_words\n",
-    "    \n",
-    "other = get_all_5_letter_words()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9074\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(other))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -117,11 +40,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "d.get(\"https://eslforums.com/5-letter-words/\")"
+    "d.get(\"https://www.nytimes.com/games/wordle/index.html/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d.find_element(By.XPATH, '//*[@data-testid=\"Play\"]').click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "with open(\"words.txt\", \"r\") as f:\n",
+    "    other = f.read().split('\\n')\n",
+    "def get_positioned(all_words, poistioned):\n",
+    "    res = []\n",
+    "    for word in all_words:\n",
+    "        add = True\n",
+    "        for i in poistioned:\n",
+    "            if word[i[0]] != i[1]:\n",
+    "                add = False\n",
+    "                break\n",
+    "        if add: res.append(word)\n",
+    "    return res\n",
+    "\n",
+    "def get_existing(words, existing):\n",
+    "    res = []\n",
+    "    for word in words:\n",
+    "        add = True\n",
+    "        for i in existing:\n",
+    "            if i not in word:\n",
+    "                add = False\n",
+    "                break\n",
+    "        if add:res.append(word)\n",
+    "    return res\n",
+    "\n",
+    "def remove_non_existing(words, no_exist):\n",
+    "    res = []\n",
+    "    for word in words:\n",
+    "        add = True\n",
+    "        for i in no_exist:\n",
+    "            if i in word:\n",
+    "                add = False\n",
+    "                break\n",
+    "        if add:res.append(word)\n",
+    "    return res\n",
+    "\n",
+    "def remove_unpositioned(words, unpositioned):\n",
+    "    res = []\n",
+    "    for word in words:\n",
+    "        add = True\n",
+    "        for i in unpositioned:\n",
+    "            if word[i[0]] == i[1]:\n",
+    "                add = False\n",
+    "                break\n",
+    "        if add: res.append(word)\n",
+    "    return res\n",
+    "\n",
+    "def get_remained(all_words, positioned, existing, non_existing, unpositioned):\n",
+    "    all_words = get_positioned(all_words, positioned)\n",
+    "    all_words = get_existing(all_words, existing)\n",
+    "    all_words = remove_non_existing(all_words, non_existing)\n",
+    "    all_words = remove_unpositioned(all_words, unpositioned)\n",
+    "    return all_words\n",
+    "    \n",
+    "\n",
+    "\n",
+    "positioned = [\n",
+    "    [1,'r']\n",
+    "]\n",
+    "existing = ['a', 'r', 'o']\n",
+    "non_existing = ['m','e','l','s', 'q','u','s','h','w','e', 'i','f','g']\n",
+    "unpositioned = [\n",
+    "    [2,'a'],\n",
+    "    [2, 'r'],\n",
+    "    [1,'o'],\n",
+    "    [3,'r'],\n",
+    "    [4,'a'],\n",
+    "    [0, 'o'],\n",
+    "    [3,'a']\n",
+    "]\n",
+    "ans = get_remained(other, positioned, existing, non_existing, unpositioned)\n",
+    "# print(get_remained(other, [], ['m','l'], ['e','a','s', 'c', 'u', 'p']))\n",
+    "print([i for i in ans])\n",
+    "print(random.choice(ans))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def enter_word(driver, word):\n",
+    "    for char in word:\n",
+    "        driver.find_element(By.XPATH, f'//button[@data-key=\"{char}\"]').click()\n",
+    "    driver.find_element(By.XPATH, f'//button[@aria-label=\"enter\"]').click()\n",
+    "    # positioned, existing, non_existing, unpositioned\n",
+    "    positioned = []\n",
+    "    rows = driver.find_elements(By.XPATH, \"\")\n",
+    "    existing = [i.text for i in driver.find_elements(By.XPATH, '//*div[@data-state=\"absent\"]')]\n",
+    "    non_existing = [i.text for i in driver.find_elements(By.XPATH, '//*div[@data-state=\"absent\"]')]\n",
+    "    unpositioned = [i.text for i in driver.find_elements(By.XPATH, '//*div[@data-state=\"absent\"]')]\n",
+    "    \n",
+    "    \n",
+    "enter_word(d, \"meals\")"
    ]
   },
   {
@@ -203,77 +238,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['manas', 'maned', 'manga', 'mango', 'mania', 'manit', 'manna', 'manos', 'manta']\n"
+      "['arbor', 'ardor']\n",
+      "arbor\n"
      ]
     }
    ],
    "source": [
-    "# with open(\"words.txt\", \"r\") as f:\n",
-    "#     other = f.read().split('\\n')\n",
-    "def get_remained(words, in_position, in_word, not_in_word, not_in_position):\n",
+    "import random\n",
+    "\n",
+    "def get_positioned(all_words, poistioned):\n",
     "    res = []\n",
-    "    # i in positi= [i, 'a']\n",
-    "    for word in words:\n",
+    "    for word in all_words:\n",
     "        add = True\n",
-    "        for i in in_position:\n",
+    "        for i in poistioned:\n",
     "            if word[i[0]] != i[1]:\n",
     "                add = False\n",
     "                break\n",
     "        if add: res.append(word)\n",
-    "    if len(res) == 0:\n",
-    "        print(\"nah\")\n",
-    "        res = words\n",
-    "    # print(res)\n",
-    "    fin = []\n",
-    "    for word in res:\n",
+    "    return res\n",
+    "\n",
+    "def get_existing(words, existing):\n",
+    "    res = []\n",
+    "    for word in words:\n",
     "        add = True\n",
-    "        for i in in_word:\n",
+    "        for i in existing:\n",
     "            if i not in word:\n",
     "                add = False\n",
     "                break\n",
-    "        if add:fin.append(word)\n",
-    "    # print(fin)\n",
-    "    fin2 = []\n",
-    "    for word in fin:\n",
+    "        if add:res.append(word)\n",
+    "    return res\n",
+    "\n",
+    "def remove_non_existing(words, no_exist):\n",
+    "    res = []\n",
+    "    for word in words:\n",
     "        add = True\n",
-    "        for i in not_in_word:\n",
+    "        for i in no_exist:\n",
     "            if i in word:\n",
     "                add = False\n",
     "                break\n",
-    "        if add:fin2.append(word)\n",
-    "    fin2 = fin\n",
-    "    for word in fin2:\n",
-    "        add = False\n",
-    "        for i in not_in_position:\n",
-    "            if word[i[0]] != i[1]:\n",
-    "                add = True\n",
+    "        if add:res.append(word)\n",
+    "    return res\n",
+    "\n",
+    "def remove_unpositioned(words, unpositioned):\n",
+    "    res = []\n",
+    "    for word in words:\n",
+    "        add = True\n",
+    "        for i in unpositioned:\n",
+    "            if word[i[0]] == i[1]:\n",
+    "                add = False\n",
     "                break\n",
-    "        if add: fin2.remove(word)\n",
-    "    \n",
-    "    return fin2\n",
-    "in_position = [\n",
-    "    [0,'m'],\n",
-    "    [1,'a'],\n",
-    "    [2,'n']\n",
-    "]\n",
+    "        if add: res.append(word)\n",
+    "    return res\n",
     "\n",
-    "in_word = ['a']\n",
-    "not_in_word = ['e','l','s', 't','c','h','g']\n",
-    "not_in_position = [\n",
-    "    [2,'a']\n",
+    "def get_remained(all_words, positioned, existing, non_existing, unpositioned):\n",
+    "    all_words = get_positioned(all_words, positioned)\n",
+    "    all_words = get_existing(all_words, existing)\n",
+    "    all_words = remove_non_existing(all_words, non_existing)\n",
+    "    all_words = remove_unpositioned(all_words, unpositioned)\n",
+    "    return all_words\n",
     "    \n",
-    "]\n",
     "\n",
-    "print(get_remained(other, in_position, in_word, not_in_word, not_in_position))\n",
-    "# print(get_remained(other, [], ['m','l'], ['e','a','s', 'c', 'u', 'p']))\n"
+    "\n",
+    "positioned = [\n",
+    "    [1,'r']\n",
+    "]\n",
+    "existing = ['a', 'r', 'o']\n",
+    "non_existing = ['m','e','l','s', 'q','u','s','h','w','e', 'i','f','g']\n",
+    "unpositioned = [\n",
+    "    [2,'a'],\n",
+    "    [2, 'r'],\n",
+    "    [1,'o'],\n",
+    "    [3,'r'],\n",
+    "    [4,'a'],\n",
+    "    [0, 'o'],\n",
+    "    [3,'a']\n",
+    "]\n",
+    "ans = get_remained(other, positioned, existing, non_existing, unpositioned)\n",
+    "# print(get_remained(other, [], ['m','l'], ['e','a','s', 'c', 'u', 'p']))\n",
+    "print([i for i in ans])\n",
+    "print(random.choice(ans))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
